<?xml version="1.0"?>
<package format="2">
  <name>landmark_map_builder</name>
  <version>0.0.0</version>
  <description>The landmark_map_builder package</description>

  <maintainer email="kazuki@todo.todo">kazuki</maintainer>
  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>yolov5_pytorch_ros</depend>
  <depend>interactive_markers</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>